# AudioPluginTemplate

./: .gitignore  CMakeLists.txt  Changelog.md  License.md  README.md  build.sh
CMake/: CPM.cmake
Plugin/: CMakeLists.txt
